src/objects/ContactUsURL__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>URL to the Contact Us page.</description>
    <fields>
        <fullName>CareHubUrl__c</fullName>
        <description>Site url for care hub</description>
        <label>Care Hub Url</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>LA_BtnVisibilityEndpoint__c</fullName>
        <label>Live Agent Button Availability Endpoint</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Live_Agent_Endpoint__c</fullName>
        <label>Live Agent Endpoint</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>URL__c</fullName>
        <label>URL</label>
        <required>true</required>
        <type>Url</type>
    </fields>
    <label>ContactUsURL</label>
</CustomObject>